objects/AthenaTest__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <externalId>true</externalId>
        <label>Description</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT__c</fullName>
        <label>RT</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>TAL__c</fullName>
        <label>TAL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TA__c</fullName>
        <label>TA</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <label>Test</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>AthenaTest</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>AthenaTest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AthenaTests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>